--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Blog Title"
-author: "Blog Author"
+title: "John's Sandbox"
+author: "John S"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "en"
@@ -10,8 +10,8 @@ date_format: "%B %d, %Y"
 
 show_excerpts: true        # show article excerpts on the home page
 show_frame: true           # adds a gray frame to the site
-show_sidebar: false        # show a sidebar instead of the usual header
-minimal: false             # use a dark header
+show_sidebar: true        # show a sidebar instead of the usual header
+minimal: true             # use a dark header
 
 # Menu
 
